# c-tricks

./: CMakeLists.txt  README.md
macro/: base_2_representation.c  coroutine.c  generic_function.c  generic_link_list.c  generic_linked_list.c  indirect_stringify.c
macro/x_macro/: main.c  person.def
misc/: duff_device.c  statement_expression.c
